using Grpc.Core;
using System.Threading.Tasks;

namespace XamlTest.Host
{
    partial class VisualTreeService
    {
        public override Task<RemoteInvocationResponse> RemoteInvocation(RemoteInvocationRequest request, ServerCallContext context)
        {
             
        }
    }
}
